fix: fixes font not showing properly

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -2,7 +2,6 @@
 @use "sass:math";
 
 @font-face {
-  src: url(~@/assets/fonts/Rubik-Regular.woff2) format('woff2');
   font-family: variables.$main-font;
   font-style: normal;
   font-weight: 400;
